# DirtyPipeZ

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/igio90/dirtypipez/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  dirtypipez.c
app/src/main/c/arch/arm64-v8a/: syscall_arch.h
app/src/main/c/include/: syscalls.h
app/src/main/java/com/igio90/dirtypipez/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/igio90/dirtypipez/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
shellcodes/: build.py  c.py  cp.S  dirtypipez.ko  dlopen.S  init.S  init.c  libbase.S  libselinux.S  libselinux.inc  modprobe.c  module.py  shellcode.py
